commit latest changes

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@pnp/nodejs": "^2.0.0",
     "@pnp/odata": "^2.0.0",
     "@types/node": "^13.7.1",
+    "@types/node-rsa": "^1.0.0",
     "@types/request-promise": "^4.1.45",
     "@types/socket.io": "^2.1.4",
     "azure-storage-legacy": "^0.11.1",
     "moment": "^2.24.0",
+    "node-rsa": "^1.0.7",
     "prettier": "^1.19.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
